fix(auth): fix add oauth, reset password
